v2.3 Fix bg image jumps on mobile scroll

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -38,8 +38,8 @@ body{
   right: 0;
   bottom: 0;
   width: 100%;
+  height: 100%;
   z-index: -1;
-  overflow: hidden;
   background: url('../img/doctor-bg-img.jpeg') #555 no-repeat center;
   background-size: cover;
   background-attachment: fixed;
